tests/lime/fail/tokens/macro_rest/byte_35.wsa
macro m# [push 35] m#
